--- a/employeesCRUD/pom.xml
+++ b/employeesCRUD/pom.xml
@@ -45,7 +45,11 @@
 				<artifactId>bootstrap</artifactId>
 				<version>5.3.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
